--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,10 @@
-# Compiled class file
-*.class
+# IDEA files
+.idea/
+/.idea/
+/ui-tests/.idea/
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# subproject files
 /target/
 /playwright-java.iml
-/.idea/
 /ui-tests/target/
-/ui-tests/.idea/
 /ui-to-test/.gitignore
