--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>heorhi-ui-test</groupId>
     <artifactId>heorhi-ui-test</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -18,7 +18,7 @@
             <dependency>
                 <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-bom</artifactId>
-                <version>7.12.1</version>
+                <version>7.7.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -68,6 +68,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.1.3.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.7.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
